# surfninja

./: .gitignore  README.md  agent.yaml  clip_test.py  her.ipynb  pyproject.toml  self_supervised.ipynb  test.py  web_ui.ipynb
deploy/: deployment.yaml
detection/: README.md
detection/notebooks/: annotation_test.ipynb  filter.ipynb
detection/scripts/: filter.py  process_webui.py  store_webui.py
explore/: clip_test.py  playwright2.py
explore/full/: dataset.py
explore/full/gpu/: a100_retry.sh  a100_retry_c.sh
explore/ssl/: learn_app.py  main.py  online.py  online2.py  online_clean.py
explore/ssl/runs/ssa-usymi3/: online_1.json  online_1.md
explore/ssl/runs/ssa-xkfve1/: online_1.json  online_1.md  online_20.json  online_20.md  online_22.json  online_22.md  online_5.json  online_5.md  online_6.json  online_6.md  online_8.json  online_8.md  online_9.json  online_9.md
surfninja/: agent.py  collect.py  gen.py  img.py  prompt.py  server.py  tool.py
surfninja/dataset/webui/data/: test.json
