[tool.poetry]
name = "surfninja"
version = "0.1.0"
description = "A precision GUI surfer"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mllm = "^0.1.31"
pillow = "^10.3.0"
playwright = "^1.44.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
clip = {git = "https://github.com/openai/CLIP.git"}
ftfy = "^6.2.0"
agentdesk = "^0.2.83"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
